# MLOPS

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml  nightly.yaml  setup.yaml  sweep.yaml
backend/: Dockerfile.backend  main.py
backend/routers/: health.py  model_management.py  predict.py  stats.py
frontend/: Dockerfile.frontend  index.html  nginx.conf  package-lock.json
frontend/src/: App.jsx
frontend/src/components/: Navbar.jsx
frontend/src/pages/: HealthPage.jsx  PredictorPage.jsx  StatsPage.jsx
ml_pipeline/: pyproject.toml
ml_pipeline/config/: model_data.py  storage_data.py
ml_pipeline/feature_pipeline/: extract.py  load.py
ml_pipeline/inference_pipeline/: backfill_predictions.py  data_fetcher.py  live_data_fetcher.py  model_fetcher.py  predictor.py
ml_pipeline/monitoring_pipeline/: honest_backtest.py  monitor.py
ml_pipeline/training_pipeline/: data_builder.py  select_champion.py  sweep.py  train.py
ml_pipeline/utils/: date_validator.py
src/feature_pipeline/: extract.py  load.py  transform.py
src/inference_pipeline/: live_data_fetcher.py  model_fetcher.py
src/training_pipeline/: data_builder.py  metadata.py  model_trainer.py  train.py
terraform/: main.tf  terraform.tfvars.example  variables.tf
tests/test_feature_pipeline/: test_extract.py  test_load.py  test_transform.py
tests/test_inference_pipeline/: test_backfill_predictions.py  test_data_fetcher.py  test_model_fetcher.py  test_predictor.py
tests/test_monitoring_pipeline/: test_monitor.py
tests/test_training_pipeline/: test_data_builder.py  test_model_trainer.py  test_select_champion.py  test_sweep.py  test_train.py
tests/test_utils/: test_validators.py
