[project]
name = "MLOps"
version = "0.1.0"
description = "Automated MLOps pipeline for data ingestion, feature engineering, and model training with integrated back- and frontend."
authors = [
    { name = "Dominic Zybach", email = "dominic.zybach@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "coinmetrics-api-client>=2026.4.30.17",
    "fastapi[standard]>=0.136.1",
    "joblib>=1.5.3",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "s3fs>=2026.4.0",
    "scikit-learn>=1.8.0",
    "wandb>=0.27.0",
    "xgboost>=3.2.0",
    "yfinance>=1.3.0",
]
